@@ -38,7 +38,7 @@ char *iface = NULL;
 char *optsrc, *optdst, *srceaddr, *dsteaddr;
 static struct in6_addr ip6src, ip6dst;
 struct in6_addr *optsrcn, *optdstn;
-int sflag = 0, dflag = 0, nflag = 0;
+int sflag = 0, dflag = 0, nflag = 0, cflag = 0;
 static void usage __P((void));
 int main __P((int, char *[]));
 int bpf_open __P((char *));
@@ -52,7 +52,7 @@ usage()
 {
 	fprintf(stderr,
 		"usage: v6test [-d dstaddr] [-f configfile] [-i interface] "
-		"[-n] [-s srcaddr] testname [testname...]\n");
+		"[-n] [-s srcaddr] [-c] testname [testname...]\n");
 	exit(1);
 }
 
@@ -67,7 +67,7 @@ main(argc, argv)
 	int fd = -1;
 	int linkhdr;
 	
-	while ((ch = getopt(argc, argv, "d:f:i:ns:")) != -1)
+	while ((ch = getopt(argc, argv, "d:f:i:ns:c")) != -1)
 		switch(ch) {
 		case 's':
 			if (inet_pton(AF_INET6, optarg, &ip6src) != 1) {
@@ -89,6 +89,9 @@ main(argc, argv)
 			break;
 		case 'n':
 			nflag++;
+			break;
+		case 'c':
+			cflag++;
 			break;
 		default:
 			usage();
