@@ -1,10 +1,13 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.1876 2001/09/16 03:47:58 suz Exp $
+$KAME: CHANGELOG,v 1.1877 2001/09/16 04:04:01 suz Exp $
 
 <200109>
 2001-09-16  suz@sdl.hitachi.co.jp
 	* kame/kame/v6test/testcap.[ch](tgetnum), getconfig.c: fixed a
 	bug that you sometimes cannot specify a value if its MSB is on.
+
+	* kame/kame/v6test/cksum.c(cksum6), v6test.c(main), v6test.1:
+	added an option not to generate checksum automatically.
 
 2001-09-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
 	* kame/kame/v6test/getconfig.c (make_rthdr): fixed routing header
